Fix overflow problem in exercise questions with tables

--- a/styles/designs/webview/parts/_exercise-components.scss
+++ b/styles/designs/webview/parts/_exercise-components.scss
@@ -35,13 +35,15 @@ $Exercise__Problem2: (
   ),
 );
 
-/// Aproach from PDFs
+/// Approach from PDFs
 $Exercise__ExerciseQuestion: (
   _name: "Problem1",
   _subselector: ' [data-type="exercise-question"]',
   _properties: (
     padding: '0.5em 1em',
     display: table,
+    table-layout: fixed,
+    width: 100%,
   ),
 );
 
